2005-06-15  Jens Seidel  <jensseidel@users.sf.net>

	* de.po: German translation spell checked.
	This is for Debian bugreport #314138

2005-06-12  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2005-06-08  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-06-05  Christian Rose  <menthos@menthos.com>

	* sv.po: Changed the translation of stylesheet.

2005-05-28  Maxim Dziumanenko <mvd@mylinux.ua>

	* uk.po: Added Ukrainian translation.

2005-05-22  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2005-05-20  Frank Arnold  <farnold@cvs.gnome.org>

	* de.po: Updated German translation.

2005-05-19  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-04-19  David Lodge  <dave@cirt.net>

	* en_GB.po: Updated British English translation.

2005-04-15  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2005-04-13  Frank Arnold  <farnold@cvs.gnome.org>

	* de.po: Updated German translation.

2005-04-09  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-04-02 Michèle Garoche  <michele.garoche@easyconnect.fr>
 
	* fr.po: Updated French translation. Last part of xxx.xds.in files.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * rw.po: Added Kinyarwanda translation.

2005-03-16  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-03-11 Michèle Garoche  <michele.garoche@easyconnect.fr>
 
	* fr.po: Updated French translation. First part of xxx.xds.in files.

2005-02-10  Kostas Papadimas <pkst@gnome.org>

	* el.po: Updated  Greek translation.

2005-01-25  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.11
	this for is bugzilla #165045

2004-12-29 Michèle Garoche  <michele.garoche@easyconnect.fr>
 
	* POTFILES.in: 
		Regenerated after *.xds.in addition
		