@@ -1,19 +1,20 @@
 # Generated by upstream script uss/mkpotfilesin
 # Use that script
 # because 'intltool-update' doesn't know about display spec files
-[type: gettext/xml encoding: UTF-8]dispspecs/cnxml.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/dispspec.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/docbook.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/forrest-document.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/kernel-traffic-newsletter.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/opml.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/readme.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/relax-ng.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/teixlite.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/website-layout.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/website-webpage.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/xhtml1-strict.xds.in
-[type: gettext/xml encoding: UTF-8]dispspecs/xsl.xds.in
+[encoding: UTF-8]
+[type: gettext/xml]dispspecs/cnxml.xds.in
+[type: gettext/xml]dispspecs/dispspec.xds.in
+[type: gettext/xml]dispspecs/docbook.xds.in
+[type: gettext/xml]dispspecs/forrest-document.xds.in
+[type: gettext/xml]dispspecs/kernel-traffic-newsletter.xds.in
+[type: gettext/xml]dispspecs/opml.xds.in
+[type: gettext/xml]dispspecs/readme.xds.in
+[type: gettext/xml]dispspecs/relax-ng.xds.in
+[type: gettext/xml]dispspecs/teixlite.xds.in
+[type: gettext/xml]dispspecs/website-layout.xds.in
+[type: gettext/xml]dispspecs/website-webpage.xds.in
+[type: gettext/xml]dispspecs/xhtml1-strict.xds.in
+[type: gettext/xml]dispspecs/xsl.xds.in
 data/conglomerate.desktop.in
 data/conglomerate.keys.in
 data/conglomerate.schemas.in
